# web_m8

./: README.md
WEB_HW8/: pyproject.toml
WEB_HW8/hw8/: hm.py  models.py
WEB_HW8/hw8_2/: consumer.py  models.py  producer.py
